# software-design-exercise

./: .gitignore  Cargo.toml  README.md  build.rs  main.rs  migrate.sql
src/: business_config.rs  enum_count.rs  main.rs
src/data/: faculty.rs  gender.rs  program.rs  status.rs  student.rs
src/io/: file_format.rs  reader.rs  selectable_enum.rs  template.rs  writer.rs
src/tests/: test.rs
templates/: student_status.html.in  student_status.md.in
