[package]
name = "exercise"
version = "0.1.0"
edition = "2021"

[build-dependencies]
chrono = "0.4.39"

[dependencies]
chrono = "0.4.39"
quick-xml = { version = "0.37.2", features = ["serialize"] }
regex = "1.11.1"
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }

[[bin]]
name = "exercise"
path = "src/main.rs"

[lib]
proc-macro = true
name = "enum_count"
path = "src/enum_count.rs"
